--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&amp;family=Manrope:wght@400;500;700&amp;family=Space+Grotesk:wght@300;400;500;600;700&amp;display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="assets/img/favicon.png" />
+    <!-- <link rel="shortcut icon" href="assets/img/favicon.png" /> -->
     <link
       rel="stylesheet"
       type="text/css"
