--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
                   ><a href="#" class="!mr-2 inline-block"
                     ><img
                       src="assets/img/photos/button-appstore.svg"
-                      class="!h-[2.8rem] !rounded-[0.8rem]"
+                      class="!h-[2.8rem] md:h-[3rem] !rounded-[0.8rem]"
                       alt="image" /></a
                 ></span>
                 <span class="inline-flex"
                   ><a class="inline-block" href="#"
                     ><img
                       src="assets/img/photos/button-google-play.svg"
-                      class="!h-[2.8rem] !rounded-[0.8rem]"
+                      class="!h-[2.8rem] md:h-[3rem] !rounded-[0.8rem]"
                       alt="image" /></a
                 ></span>
               </div>
