--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
       .accordion-wrapper .card-header button {
         color: #605dba !important;
       }
+      .imgh {
+        height: 2.8rem;
+      }
     </style>
   </head>
 
@@ -270,14 +273,14 @@
                   ><a href="#" class="!mr-2 inline-block"
                     ><img
                       src="assets/img/photos/button-appstore.svg"
-                      class="!h-[3rem] !rounded-[0.8rem]"
+                      class="imgh !rounded-[0.8rem]"
                       alt="image" /></a
                 ></span>
                 <span class="inline-flex"
                   ><a class="inline-block" href="#"
                     ><img
                       src="assets/img/photos/button-google-play.svg"
-                      class="!h-[3rem] !rounded-[0.8rem]"
+                      class="imgh !rounded-[0.8rem]"
                       alt="image" /></a
                 ></span>
               </div>
