--- a/index.html
+++ b/index.html
@@ -1282,14 +1282,14 @@
                   ><a href="#" class="!mr-2 inline-block"
                     ><img
                       src="assets/img/photos/button-appstore.svg"
-                      class="!h-[3rem] !rounded-[0.8rem]"
+                      class="imgh !rounded-[0.8rem]"
                       alt="image" /></a
                 ></span>
                 <span class="inline-flex"
                   ><a href="#" class="inline-block"
                     ><img
                       src="assets/img/photos/button-google-play.svg"
-                      class="!h-[3rem] !rounded-[0.8rem]"
+                      class="imgh !rounded-[0.8rem]"
                       alt="image" /></a
                 ></span>
               </div>
@@ -1301,7 +1301,7 @@
                 <img
                   class="w-full max-w-full !h-auto"
                   src="assets/img/ls3.png"
-                  srcset="./assets/img/photos/devices6@2x.png 2x"
+                  srcset=".assets/img/ls3.png 2x"
                   alt="image"
                 />
               </figure>
