--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <img
                   class="w-full max-w-full !h-auto"
                   src="assets/img/ls3.png"
-                  srcset="./assets/img/photos/devices3@2x.png 2x"
+                  srcset=".assets/img/ls3.png 2x"
                   alt="image"
                 />
               </figure>
