--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <img
                   class="w-full max-w-full !h-auto"
                   src="assets/img/ls3.png"
-                  srcset=".assets/img/ls3.png 2x"
+                  srcset=""
                   alt="image"
                 />
               </figure>
@@ -384,11 +384,7 @@
                   class="md:w-6/12 lg:w-4/12 xl:w-4/12 w-full flex-[0_0_auto] px-[15px] max-w-full !mx-auto mb-[-2.5rem] lg:!mb-0 xl:!mb-0 mt-[50px] xl:mt-0 lg:mt-0"
                 >
                   <figure class="mx-auto">
-                    <img
-                      src="assets/img/ls1.png"
-                      srcset="./assets/img/photos/devices4@2x.png 2x"
-                      alt="image"
-                    />
+                    <img src="assets/img/ls1.png" srcset="" alt="image" />
                   </figure>
                 </div>
                 <div
@@ -632,7 +628,7 @@
                 <img
                   class="w-full max-w-full !h-auto"
                   src="assets/img/photos/devices5.png"
-                  srcset="./assets/img/photos/devices5@2x.png 2x"
+                  srcset=""
                   alt="image"
                 />
               </figure>
@@ -1301,7 +1297,7 @@
                 <img
                   class="w-full max-w-full !h-auto"
                   src="assets/img/ls3.png"
-                  srcset=".assets/img/ls3.png 2x"
+                  srcset=""
                   alt="image"
                 />
               </figure>
