--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
           </div>
           <div class="offcanvas-body !pb-[1.5rem]">
             <div class="widget mb-8">
-              <p>
+              <!-- <p>
                 Learn softi is a multipurpose HTML5 template with various
                 layouts which will be a great solution for your business.
-              </p>
+              </p> -->
             </div>
             <div class="widget mb-8">
               <h4
@@ -182,7 +182,7 @@
               >
                 Follow Us
               </h4>
-              <nav class="nav social social-white">
+              <!-- <nav class="nav social social-white">
                 <a
                   class="text-[#cacaca] text-[1rem] transition-all duration-[0.2s] ease-in-out translate-y-0 motion-reduce:transition-none hover:translate-y-[-0.15rem] m-[0_.7rem_0_0]"
                   href="#"
@@ -218,7 +218,7 @@
                     class="uil uil-youtube before:content-['\edb5'] !text-white text-[1rem]"
                   ></i
                 ></a>
-              </nav>
+              </nav> -->
             </div>
           </div>
         </div>
