--- a/index.html
+++ b/index.html
@@ -1264,8 +1264,8 @@
               <h2
                 class="text-[calc(1.325rem_+_0.9vw)] font-semibold !leading-[1.2] xl:text-[2rem] mb-4"
               >
-                Manage all your bills, accounts & budgets in
-                <span class="text-gradient gradient-7">one place.</span>
+                The Ultimate Traning & Evaluation Solution for
+                <span class="text-gradient gradient-7">Organizations</span>
               </h2>
               <p class="lead !text-[1.2rem] !leading-[1.5] font-normal mb-7">
                 Learn softi is available to download from both App Store and
