--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Always up to Date</h4>
+                  <h4 class="text-[1rem]">Easy Navigation</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -502,7 +502,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Easy Usage</h4>
+                  <h4 class="text-[1rem]">Data Security</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -516,7 +516,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Secure Payments</h4>
+                  <h4 class="text-[1rem]">User Support</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -530,7 +530,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Fast Transactions</h4>
+                  <h4 class="text-[1rem]">Added Value</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -544,7 +544,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Reports & Forecasting</h4>
+                  <h4 class="text-[1rem]">Time Efficiency</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -558,7 +558,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Online Banking</h4>
+                  <h4 class="text-[1rem]">Flexible Access</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -572,7 +572,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">Configurable Fields</h4>
+                  <h4 class="text-[1rem]">Interactive Features</h4>
                 </div>
                 <div
                   class="md:w-6/12 lg:w-3/12 xl:w-3/12 w-full flex-[0_0_auto] px-[15px] xl:px-[20px] lg:px-[20px] md:px-[20px] mt-[50px] max-w-full"
@@ -586,7 +586,7 @@
                       alt="image"
                     />
                   </div>
-                  <h4 class="text-[1rem]">List of Transactions</h4>
+                  <h4 class="text-[1rem]">Personalized Learning</h4>
                 </div>
               </div>
             </div>
