--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       content="Tailwind CSS, business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template"
     />
     <meta name="author" content="elemis" />
-    <title>Learn softi - Modern & Multipurpose Tailwind CSS Template</title>
+    <title>Learnsofti - Modern & Multipurpose Tailwind CSS Template</title>
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
@@ -66,7 +66,7 @@
           >
             <div class="navbar-brand w-full">
               <a href="index.html">
-                <h1>Learn Softi</h1>
+                <h1>LEARNSOFTI</h1>
               </a>
             </div>
             <div
@@ -78,7 +78,7 @@
                 <h3
                   class="text-white xl:text-[1.5rem] !text-[calc(1.275rem_+_0.3vw)] !mb-0"
                 >
-                  Learn softi
+                  Learnsofti
                 </h3>
                 <button
                   type="button"
@@ -120,7 +120,7 @@
             <h3
               class="text-white xl:!text-[1.5rem] text-[calc(1.275rem_+_0.3vw)] !leading-[1.4] mb-0"
             >
-              Learn softi
+              Learnsofti
             </h3>
             <button
               type="button"
@@ -132,7 +132,7 @@
           <div class="offcanvas-body !pb-[1.5rem]">
             <div class="widget mb-8">
               <!-- <p>
-                Learn softi is a multipurpose HTML5 template with various
+                Learnsofti is a multipurpose HTML5 template with various
                 layouts which will be a great solution for your business.
               </p> -->
             </div>
@@ -143,8 +143,12 @@
                 Contact Info
               </h4>
               <address class="not-italic leading-[inherit] mb-[1rem]">
-                Moonshine St. 14/05 <br />
-                Light City, London
+                Learnsofti <br />
+                Tech Butomy Pvt Ltd
+                <br />
+                The V Building, 1002 <br />
+                Kundamobhagam, Peyad, Kerala <br />
+                695573
               </address>
             </div>
             <div class="widget mb-8">
@@ -260,7 +264,7 @@
                 <span class="text-gradient gradient-7">Organizations</span>
               </h1>
               <p class="lead !text-[1.2rem] !leading-[1.5] font-normal mb-7">
-                Learn softi is available to download from both App Store and
+                Learnsofti is available to download from both App Store and
                 Google Play Store.
               </p>
               <div
@@ -320,7 +324,7 @@
               <h3
                 class="xl:text-[2rem] text-[calc(1.325rem_+_0.9vw)] font-semibold !leading-[1.2] mb-12 lg:!px-5 xl:!px-0 xxl:!px-6"
               >
-                <span class="text-gradient gradient-7">Learn Softi</span>
+                <span class="text-gradient gradient-7">Learnsofti</span>
               </h3>
             </div>
           </div>
@@ -369,7 +373,7 @@
                 class="text-[calc(1.325rem_+_0.9vw)] font-bold !leading-[1.2] xl:text-[2rem] !mb-8 xl:!px-6"
               >
                 Why Choose
-                <span class="text-gradient gradient-7">Learn Softi</span>
+                <span class="text-gradient gradient-7">Learnsofti</span>
               </h3>
             </div>
           </div>
@@ -463,9 +467,9 @@
               <h3
                 class="xl:text-[2rem] text-[calc(1.325rem_+_0.9vw)] font-semibold !leading-[1.2] mb-12 lg:!px-5 xl:!px-0 xxl:!px-6"
               >
-                Learn softi makes your spending
-                <span class="text-gradient gradient-7">stress-free</span> for
-                you to have the perfect control.
+                Enhance Learning and Productivity with
+                <span class="text-gradient gradient-7">Learnsofti’s</span>
+                Seamless Navigation, Secure Access, and Personalized Support
               </h3>
             </div>
           </div>
@@ -609,7 +613,7 @@
               <!-- <h2
                 class="text-[0.8rem] uppercase text-[#aab0bc] mb-3 !text-center !leading-[1.35]"
               >
-                Why Choose Learn softi?
+                Why Choose Learnsofti?
               </h2> -->
               <h3
                 class="text-[calc(1.325rem_+_0.9vw)] font-bold !leading-[1.2] xl:text-[2rem] mb-14 !text-center"
@@ -1001,7 +1005,7 @@
                           aria-expanded="false"
                           aria-controls="accordion-collapse-1-1"
                         >
-                          Can I cancel my subscription?
+                          What are customizable learning paths?
                         </button>
                       </div>
                       <div
@@ -1014,14 +1018,9 @@
                           class="card-body flex-[1_1_auto] p-[0_1.25rem_.25rem_2.35rem]"
                         >
                           <p>
-                            Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo
-                            sit amet risus. Cras mattis consectetur purus sit
-                            amet fermentum. Praesent commodo cursus magna, vel
-                            scelerisque nisl consectetur et. Cum sociis natoque
-                            penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Donec sed odio dui. Cras justo odio,
-                            dapibus ac facilisis.
+                            You can create training modules tailored to
+                            individual roles and team goals, making learning
+                            more relevant for each employee.
                           </p>
                         </div>
                       </div>
@@ -1040,7 +1039,7 @@
                           aria-expanded="false"
                           aria-controls="accordion-collapse-1-2"
                         >
-                          Which payment methods do you accept?
+                          How does performance tracking work?
                         </button>
                       </div>
                       <div
@@ -1053,14 +1052,9 @@
                           class="card-body flex-[1_1_auto] p-[0_1.25rem_.25rem_2.35rem]"
                         >
                           <p>
-                            Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo
-                            sit amet risus. Cras mattis consectetur purus sit
-                            amet fermentum. Praesent commodo cursus magna, vel
-                            scelerisque nisl consectetur et. Cum sociis natoque
-                            penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Donec sed odio dui. Cras justo odio,
-                            dapibus ac facilisis.
+                            You can easily track employee progress, see
+                            strengths, and identify areas for improvement to
+                            guide their development.
                           </p>
                         </div>
                       </div>
@@ -1079,7 +1073,7 @@
                           aria-expanded="false"
                           aria-controls="accordion-collapse-1-3"
                         >
-                          How can I manage my Account?
+                          How does Learnsofti help with compliance?
                         </button>
                       </div>
                       <div
@@ -1092,14 +1086,9 @@
                           class="card-body flex-[1_1_auto] p-[0_1.25rem_.25rem_2.35rem]"
                         >
                           <p>
-                            Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo
-                            sit amet risus. Cras mattis consectetur purus sit
-                            amet fermentum. Praesent commodo cursus magna, vel
-                            scelerisque nisl consectetur et. Cum sociis natoque
-                            penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Donec sed odio dui. Cras justo odio,
-                            dapibus ac facilisis.
+                            Learnsofti keeps your organization up-to-date with
+                            the latest training programs to meet regulatory
+                            standards.
                           </p>
                         </div>
                       </div>
@@ -1124,7 +1113,7 @@
                           aria-expanded="false"
                           aria-controls="accordion-collapse-2-1"
                         >
-                          How do I get my subscription receipt?
+                          Is Learnsofti easy to use?
                         </button>
                       </div>
                       <div
@@ -1137,14 +1126,8 @@
                           class="card-body flex-[1_1_auto] p-[0_1.25rem_.25rem_2.35rem]"
                         >
                           <p>
-                            Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo
-                            sit amet risus. Cras mattis consectetur purus sit
-                            amet fermentum. Praesent commodo cursus magna, vel
-                            scelerisque nisl consectetur et. Cum sociis natoque
-                            penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Donec sed odio dui. Cras justo odio,
-                            dapibus ac facilisis.
+                            Yes, the platform is user-friendly, making it simple
+                            for both learners and administrators to navigate.
                           </p>
                         </div>
                       </div>
@@ -1163,7 +1146,7 @@
                           aria-expanded="false"
                           aria-controls="accordion-collapse-2-2"
                         >
-                          Are there any discounts for people in need?
+                          Can I use Learnsofti on my phone?
                         </button>
                       </div>
                       <div
@@ -1176,14 +1159,8 @@
                           class="card-body flex-[1_1_auto] p-[0_1.25rem_.25rem_2.35rem]"
                         >
                           <p>
-                            Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo
-                            sit amet risus. Cras mattis consectetur purus sit
-                            amet fermentum. Praesent commodo cursus magna, vel
-                            scelerisque nisl consectetur et. Cum sociis natoque
-                            penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Donec sed odio dui. Cras justo odio,
-                            dapibus ac facilisis.
+                            Answer: Yes, Learnsofti is mobile-friendly, so you
+                            can access training anywhere, anytime.
                           </p>
                         </div>
                       </div>
@@ -1202,7 +1179,7 @@
                           aria-expanded="false"
                           aria-controls="accordion-collapse-2-3"
                         >
-                          Do you offer a free trial edit?
+                          What makes Learnsofti different?
                         </button>
                       </div>
                       <div
@@ -1215,14 +1192,9 @@
                           class="card-body flex-[1_1_auto] p-[0_1.25rem_.25rem_2.35rem]"
                         >
                           <p>
-                            Fusce dapibus, tellus ac cursus commodo, tortor
-                            mauris condimentum nibh, ut fermentum massa justo
-                            sit amet risus. Cras mattis consectetur purus sit
-                            amet fermentum. Praesent commodo cursus magna, vel
-                            scelerisque nisl consectetur et. Cum sociis natoque
-                            penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Donec sed odio dui. Cras justo odio,
-                            dapibus ac facilisis.
+                            Learnsofti combines customizable learning,
+                            performance tracking, compliance management, and
+                            mobile access—all in one easy-to-use platform.
                           </p>
                         </div>
                       </div>
@@ -1268,7 +1240,7 @@
                 <span class="text-gradient gradient-7">Organizations</span>
               </h2>
               <p class="lead !text-[1.2rem] !leading-[1.5] font-normal mb-7">
-                Learn softi is available to download from both App Store and
+                Learnsofti is available to download from both App Store and
                 Google Play Store.
               </p>
               <div
@@ -1313,9 +1285,9 @@
             class="md:w-4/12 xl:w-3/12 lg:w-3/12 w-full flex-[0_0_auto] px-[15px] max-w-full xl:mt-0 lg:mt-0 mt-[30px]"
           >
             <div class="widget">
-              <h1 class="">Learn Softi</h1>
+              <h1 class="">Learnsofti</h1>
               <p class="!mb-4">
-                © 2024 Learn softi. <br class="hidden xl:block lg:block" />All
+                © 2024 Learnsofti. <br class="hidden xl:block lg:block" />All
                 rights reserved.
               </p>
               <!-- <nav class="nav social">
@@ -1365,7 +1337,12 @@
               <address
                 class="xl:pr-[4rem] xxl:!pr-[5rem] not-italic leading-[inherit] block mb-4"
               >
-                Moonshine St. 14/05 Light City, London, United Kingdom
+                Learnsofti <br />
+                Tech Butomy Pvt Ltd
+                <br />
+                The V Building, 1002 <br />
+                Kundamobhagam, Peyad, Kerala <br />
+                695573
               </address>
             </div>
           </div>
